# notification-daemon-engine-coco

./: AUTHORS  ChangeLog  Credits  Makefile.am  Makefile.in  README  README.mkd  aclocal.m4  configure.ac
src/: Makefile.am  Makefile.in  coco-theme.c  config.h.in  nodoka-theme.c
